# MiniRenderer

./: .gitignore  3DBlockBuilding.cpp  CMakeLists.txt  Defines.hpp  ImgToPgm.cpp  Main.cpp  MiniGLM.hpp  MiniThreads.hpp  README.md
examples/: BlockBuilding.Golfed.cpp  BlockBuilding.cpp  BlockBuilding3D.cpp  Cube.cpp  GaussianDistribution3D.cpp  ImgToPgm.cpp  Mandelbrot.cpp
include/: Defines.hpp  MiniDefines.hpp  MiniGLM.hpp  MiniGLM_ex.hpp  MiniImage.hpp  MiniPgm.hpp  MiniRenderer.hpp  MiniWindow.hpp  Pgm.hpp
